# rules_python

examples/bzlmod_build_file_generation/: MODULE.bazel  prepare.sh
gazelle/: MODULE.bazel
